--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
   margin: 0;
   padding: 0;
 }
+.pra p
+{
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    align-items: center;
+    text-shadow: 3px 3px 5px red;  
+}
 canvas {
   position: absolute;
   top: 0;
